--- a/index.html
+++ b/index.html
@@ -184,7 +184,12 @@
                 <h4 class="title title-decor">Прогуляйтесь</h4>
                 <p>
                   Или даже пробегитесь. Лучше найти парк или лес: один
-                  эксперимент показал, что созерцание природы повышает
+                  эксперимент <a
+                  class="link shadow-decor"
+                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                  target="_blank"
+                  >показал</a>
+                  , что созерцание природы повышает
                   концентрацию, в то время как после просмотра городских
                   пейзажей она наоборот понижается. Можно совместить прогулку с
                   физическими упражнениями или бегом — так в мозг поступит ещё
